Fixing scrollbars on legend overlay and measure popup styling

--- a/modules/map/components/overlay-legend/_overlay-legend.scss
+++ b/modules/map/components/overlay-legend/_overlay-legend.scss
@@ -30,7 +30,8 @@
   color: $primary-dark;
   font-weight: normal;
   text-align: left;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .c-overlay-legend__header {
